--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <meta name="description" content="A simple 2D physics library in JavaScript" />
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@github">
-        <meta name="twitter:title" content="physicsplain - 2D physics in JavaScript">
+        <meta name="twitter:title" content="physicsplain &ndash; 2D physics in JavaScript">
         <meta name="twitter:description" content="physicsplain is a simple 2D physics library written in JavaScript, intended for small browser games and animations.">
         <meta name="twitter:creator" content="@hemasail">
         <meta name="twitter:image" content="https://cloud.githubusercontent.com/assets/344615/11359955/7ccd24e2-9235-11e5-9273-544513b225df.png">
-        <meta property="og:title" content="physicsplain - 2D physics in JavaScript" />
+        <meta property="og:title" content="physicsplain &ndash; 2D physics in JavaScript" />
         <meta property="og:type" content="article" />
         <meta property="og:url" content="http://www.example.com/" />
         <meta property="og:image" content="https://cloud.githubusercontent.com/assets/344615/11359955/7ccd24e2-9235-11e5-9273-544513b225df.png" />
