--- a/index.html
+++ b/index.html
@@ -22,14 +22,7 @@
         <meta property="og:description" content="physicsplain is a simple 2D physics library written in JavaScript, intended for small browser games and animations." />
         <meta property="og:site_name" content="Github" />
         
-        <script src="js/unionfind.js"></script>
-        <script src="js/vector.js"></script>
-        <script src="js/collisionpoint.js"></script>
-        <script src="js/collision.js"></script>
-        <script src="js/state.js"></script>
-        <script src="js/body.js"></script>
-        <script src="js/fixedbody.js"></script>
-        <script src="js/main.js"></script>
+        <script type="module" src="main.js"></script>
     </head>
     <body>
         <div id="content">
