added fixed arc

--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
             <canvas id="canvas1" width="500" height="260"></canvas>
 
             <h2>Example 2</h2>
-            <p>Objects are falling down due to gravitational force.</p>
+            <p>Objects falling from the sky.</p>
             <canvas id="canvas2" width="500" height="260"></canvas>
 
             <h2>Example 3</h2>
-            <p>Use the arrow keys or W, A, S, D to move the small, light square. This example shows how user input is translated into forces that move an object.</p>
-            <p>If the keyboard input does not work, try clicking onto the canvas first.</p>
+            <p>Bouncing off a round wall.</p>
             <canvas id="canvas3" width="500" height="260"></canvas>
             
             <h2>More Information</h2>
