--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <canvas id="canvas2" width="500" height="260"></canvas>
 
             <h2>Example 3</h2>
-            <p>Bouncing off a round wall.</p>
+            <p>Bouncing off arcs and circles.</p>
             <canvas id="canvas3" width="500" height="260"></canvas>
             
             <h2>More Information</h2>
