added fixed line

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             <h2>Example 3</h2>
             <p>Bouncing off arcs and circles.</p>
             <canvas id="canvas3" width="500" height="260"></canvas>
+
+            <h2>Example 4</h2>
+            <p>Bouncing off fixed lines.</p>
+            <canvas id="canvas4" width="500" height="260"></canvas>
             
             <h2>More Information</h2>
             <p>For more information go to <a href="http://github.com/hemartin/physicsplain">this project's Github page</a>.</p>
